--- a/src/screens/Browse.scss
+++ b/src/screens/Browse.scss
@@ -17,8 +17,8 @@
     border: 2px solid white;
     border-radius: 7px;
     background-color: rgba(255, 255, 255, 0.87);
-    height: 100px;
-    padding: 20px;
+    height: 60px;
+    padding: 5px;
     box-sizing: border-box;
     --x: 6; /* number of columns */
     --gap: 10px; /* control the gap */
