--- a/src/screens/Home.scss
+++ b/src/screens/Home.scss
@@ -18,93 +18,9 @@
     --g: 20px; /* control the gap */
     --f: 1.5; /* control the scale factor */
     display: grid;
-    max-width: calc(var(--m) * 154px + var(--g) * (var(--m) - 1));
+    max-width: calc(var(--m) * 150px + var(--g) * (var(--m) - 1));
     gap: var(--g);
     width: calc(var(--m) * var(--s) + (var(--m) - 1) * var(--g));
     height: calc(var(--n) * var(--s) + (var(--n) - 1) * var(--g));
     grid-template-columns: repeat(var(--m), auto);  
-}
-
-@media screen and (max-width: 1800px) {
-    .HomeItems-container {
-        --n: 9; /* number of rows*/
-        --m: 9; /* number of columns */
-        --g: 20px; /* control the gap */
-        --f: 1.5; /* control the scale factor */
-    }
-}
-
-@media screen and (max-width: 1600px) {
-    .HomeItems-container {
-        --n: 8; /* number of rows*/
-        --m: 8; /* number of columns */
-        --g: 20px; /* control the gap */
-        --f: 1.5; /* control the scale factor */
-    }
-}
-
-@media screen and (max-width: 1400px) {
-    .HomeItems-container {
-        --n: 7; /* number of rows*/
-        --m: 7; /* number of columns */
-        --g: 20px; /* control the gap */
-        --f: 1.5; /* control the scale factor */
-    }
-}
-
-@media screen and (max-width: 1230px) {
-    .HomeItems-container {
-        --n: 6; /* number of rows*/
-        --m: 6; /* number of columns */
-        --g: 20px; /* control the gap */
-        --f: 1.5; /* control the scale factor */
-    }
-}
-
-@media screen and (max-width: 1100px) {
-    .HomeItems-container {
-        --n: 5; /* number of rows*/
-        --m: 5; /* number of columns */
-        --g: 20px; /* control the gap */
-        --f: 1.5; /* control the scale factor */
-    }
-}
-
-
-@media screen and (max-width: 1000px) {
-    .HomeItems-container {
-        --n: 4; /* number of rows*/
-        --m: 4; /* number of columns */
-        --g: 20px; /* control the gap */
-        --f: 1.5; /* control the scale factor */
-    }
-}
-
-@media screen and (max-width: 800px) {
-    .HomeItems-container {
-        --n: 3; /* number of rows*/
-        --m: 3; /* number of columns */
-        --g: 20px; /* control the gap */
-        --f: 1.5; /* control the scale factor */
-    }
-}
-
-
-@media screen and (max-width: 560px) {
-    .HomeItems-container {
-        --n: 2; /* number of rows*/
-        --m: 2; /* number of columns */
-        --g: 20px; /* control the gap */
-        --f: 1.5; /* control the scale factor */
-    }
-}
-
-
-@media screen and (max-width: 360px) {
-    .HomeItems-container {
-        --n: 1; /* number of rows*/
-        --m: 1; /* number of columns */
-        --g: 20px; /* control the gap */
-        --f: 1.5; /* control the scale factor */
-    }
 }
